--- a/docs/系统设计文档.md
+++ b/docs/系统设计文档.md
@@ -1,13 +1,240 @@
-# 图书馆资源智能化推荐系统设计文档（初步方案）
+# 图书馆资源智能化推荐系统设计文档
 
 ## 项目概述
 基于协同过滤与内容特征的图书馆资源智能化推荐系统，采用SpringBoot + Vue技术栈实现，算法部分使用Python实现。
 
-## 核心算法详细实现
+**开发策略**: 优先开发Web系统基础功能，后续集成推荐算法，确保项目渐进式交付。
 
-### 协同过滤算法实现
+## 系统架构设计
 
-#### 1. 用户基协同过滤（User-Based CF）
+### 1. 整体架构
+```
+┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
+│   Vue.js前端    │    │ SpringBoot后端  │    │   MySQL数据库   │
+│                 │◄──►│                 │◄──►│                 │
+│ - 用户界面      │    │ - RESTful API   │    │ - 业务数据      │
+│ - 图书展示      │    │ - 业务逻辑      │    │ - 用户信息      │
+│ - 推荐结果      │    │ - 数据管理      │    │ - 评分记录      │
+└─────────────────┘    └─────────────────┘    └─────────────────┘
+                                │
+                       ┌─────────────────┐
+                       │  Python算法服务  │
+                       │                 │
+                       │ - 协同过滤      │
+                       │ - 内容推荐      │
+                       │ - 混合算法      │
+                       └─────────────────┘
+```
+
+### 2. 技术栈选择
+- **前端**: Vue 3 + Element Plus + Axios
+- **后端**: SpringBoot 3 + Spring Security + MyBatis Plus
+- **数据库**: MySQL 8.0
+- **算法**: Python + pandas + scikit-learn + Flask
+- **部署**: Docker + Nginx
+
+## 数据库设计
+
+### 1. 核心数据表
+详细设计见 `docs/数据库设计文档.md`
+
+**主要数据表**:
+- `users` - 用户基本信息（含登录认证）
+- `books` - 图书元数据  
+- `ratings` - 用户评分记录
+- `favorites` - 用户收藏
+- `recommendations` - 推荐记录（算法阶段添加）
+
+### 2. 数据连接信息
+```
+Host: 116.205.244.106:3306
+Database: book_recommendation
+Username: root
+Password: 202358hjq
+```
+
+## SpringBoot后端设计
+
+### 1. 项目结构
+```
+src/main/java/com/bookrs/
+├── BookRecommendationApplication.java
+├── config/                    # 配置类
+│   ├── DatabaseConfig.java
+│   ├── SecurityConfig.java
+│   └── WebConfig.java
+├── controller/                # 控制器层
+│   ├── UserController.java
+│   ├── BookController.java
+│   ├── RatingController.java
+│   └── RecommendController.java
+├── service/                   # 服务层
+│   ├── UserService.java
+│   ├── BookService.java
+│   ├── RatingService.java
+│   └── RecommendService.java
+├── mapper/                    # 数据访问层
+│   ├── UserMapper.java
+│   ├── BookMapper.java
+│   └── RatingMapper.java
+├── entity/                    # 实体类
+│   ├── User.java
+│   ├── Book.java
+│   └── Rating.java
+├── dto/                       # 数据传输对象
+└── common/                    # 通用组件
+    ├── Result.java
+    ├── PageResult.java
+    └── GlobalExceptionHandler.java
+```
+
+### 2. 核心API设计
+
+#### 用户管理API
+```java
+@RestController
+@RequestMapping("/api/users")
+public class UserController {
+    
+    @PostMapping("/register")
+    public Result<UserDTO> register(@RequestBody RegisterRequest request);
+    
+    @PostMapping("/login") 
+    public Result<LoginResponse> login(@RequestBody LoginRequest request);
+    
+    @GetMapping("/{userId}")
+    public Result<UserDTO> getUserInfo(@PathVariable Integer userId);
+    
+    @PutMapping("/{userId}")
+    public Result<Void> updateUserInfo(@PathVariable Integer userId, @RequestBody UserUpdateRequest request);
+}
+```
+
+#### 图书管理API
+```java
+@RestController
+@RequestMapping("/api/books")
+public class BookController {
+    
+    @GetMapping
+    public Result<PageResult<BookDTO>> getBooks(
+        @RequestParam(defaultValue = "1") Integer page,
+        @RequestParam(defaultValue = "20") Integer size,
+        @RequestParam(required = false) String keyword);
+    
+    @GetMapping("/{bookId}")
+    public Result<BookDetailDTO> getBookDetail(@PathVariable String bookId);
+    
+    @GetMapping("/search")
+    public Result<PageResult<BookDTO>> searchBooks(@RequestParam String keyword);
+    
+    @GetMapping("/categories")
+    public Result<List<String>> getCategories();
+}
+```
+
+#### 评分管理API
+```java
+@RestController
+@RequestMapping("/api/ratings")
+public class RatingController {
+    
+    @PostMapping
+    public Result<Void> addRating(@RequestBody RatingRequest request);
+    
+    @GetMapping("/user/{userId}")
+    public Result<PageResult<RatingDTO>> getUserRatings(@PathVariable Integer userId);
+    
+    @GetMapping("/book/{bookId}")
+    public Result<PageResult<RatingDTO>> getBookRatings(@PathVariable String bookId);
+    
+    @GetMapping("/book/{bookId}/stats")
+    public Result<RatingStatsDTO> getBookRatingStats(@PathVariable String bookId);
+}
+```
+
+#### 推荐API
+```java
+@RestController
+@RequestMapping("/api/recommendations")
+public class RecommendController {
+    
+    @GetMapping("/user/{userId}")
+    public Result<List<RecommendationDTO>> getRecommendations(@PathVariable Integer userId);
+    
+    @GetMapping("/popular")
+    public Result<List<BookDTO>> getPopularBooks();
+    
+    @GetMapping("/latest")
+    public Result<List<BookDTO>> getLatestBooks();
+    
+    @PostMapping("/feedback")
+    public Result<Void> recordFeedback(@RequestBody FeedbackRequest request);
+}
+```
+
+## Vue前端设计
+
+### 1. 项目结构
+```
+src/
+├── main.js                    # 入口文件
+├── App.vue                    # 根组件
+├── router/                    # 路由配置
+│   └── index.js
+├── store/                     # 状态管理
+│   └── index.js
+├── views/                     # 页面组件
+│   ├── Home.vue              # 首页
+│   ├── Login.vue             # 登录页
+│   ├── Register.vue          # 注册页
+│   ├── BookList.vue          # 图书列表
+│   ├── BookDetail.vue        # 图书详情
+│   ├── Profile.vue           # 个人中心
+│   └── Recommendations.vue   # 推荐页面
+├── components/                # 公共组件
+│   ├── BookCard.vue          # 图书卡片
+│   ├── RatingComponent.vue   # 评分组件
+│   └── Header.vue            # 页面头部
+├── api/                       # API调用
+│   ├── user.js
+│   ├── book.js
+│   └── rating.js
+├── utils/                     # 工具函数
+└── assets/                    # 静态资源
+```
+
+### 2. 核心页面设计
+
+#### 首页 (Home.vue)
+- 热门图书展示
+- 最新图书推荐
+- 分类导航
+- 搜索框
+
+#### 图书列表 (BookList.vue)
+- 图书网格展示
+- 分页功能
+- 筛选排序
+- 搜索结果
+
+#### 图书详情 (BookDetail.vue)
+- 图书基本信息
+- 评分统计
+- 用户评分功能
+- 相似图书推荐
+
+#### 个人中心 (Profile.vue)
+- 用户基本信息
+- 评分历史
+- 收藏图书
+- 个性化推荐
+
+## 推荐算法设计（第三阶段实现）
+
+### 1. 协同过滤算法
+
+#### 1.1 用户基协同过滤（User-Based CF）
 
 **基本思想**：找到与目标用户兴趣相似的用户，推荐这些相似用户喜欢的图书。
 
@@ -737,52 +964,13 @@ src/
 - 分库分表策略
 - 索引优化
 
-## 实施计划（简化版）
-
-### 第一阶段: 数据准备（1-2周）
-- [ ] 下载Book-Crossing数据集
-- [ ] 数据清洗和预处理
-- [ ] 构建MySQL数据库
-- [ ] 数据导入和基础查询
-
-### 第二阶段: 算法实现（3-4周）
-- [ ] 用户基协同过滤算法（手写实现）
-- [ ] 物品基协同过滤算法（手写实现）
-- [ ] 基于内容的推荐算法
-- [ ] 简单加权融合
-- [ ] 推荐结果评估
-
-### 第三阶段: 系统开发（3-4周）
-- [ ] SpringBoot后端接口
-- [ ] Vue前端页面
-- [ ] 推荐结果展示
-- [ ] 基础功能测试
-
-### 第四阶段: 完善优化（1-2周）
-- [ ] 性能优化
-- [ ] 界面美化
-- [ ] 论文撰写
-- [ ] 系统部署
-
-## 技术要点
-
-### 关键依赖
-```
-- Python: pandas, numpy, sklearn
-- Java: SpringBoot, MyBatis, MySQL
-- Frontend: Vue3, ElementPlus, Axios
-```
-
-### 核心算法库
-- **sklearn**: 特征提取、评估指标、交叉验证
-- **pandas**: 数据处理和矩阵操作
-- **numpy**: 数值计算
-
 ## 预期成果
 1. 完整的推荐系统demo
 2. 算法对比实验报告
 3. 本科毕业论文
 4. 系统使用说明文档
+
+**详细实施计划请参考**: `docs/项目实施计划.md`
 
 ---
 
