--- a/docs/项目内容介绍.md
+++ b/docs/项目内容介绍.md
@@ -22,6 +22,7 @@ Books/
 ├── docs/                          # 项目文档目录
 │   ├── README.md                 # 项目总体介绍
 │   ├── 系统设计文档.md           # 技术设计和算法实现
+│   ├── 数据库设计文档.md         # 数据库表结构设计
 │   ├── 项目实施计划.md           # 详细实施计划和进度
 │   ├── 项目内容介绍.md           # 项目内容详细说明（本文档）
 │   ├── 论文写作指导.md           # 毕业论文写作指导
@@ -230,6 +231,7 @@ python process_users_data.py
 ### 文档查看顺序
 1. **README.md** - 项目总体了解
 2. **项目内容介绍.md** - 详细文件说明（本文档）
-3. **系统设计文档.md** - 技术实现细节
-4. **项目实施计划.md** - 开发计划和进度
+3. **数据库设计文档.md** - 数据库表结构设计
+4. **系统设计文档.md** - 技术实现细节
+5. **项目实施计划.md** - 开发计划和进度
 
