--- a/docs/数据库设计文档.md
+++ b/docs/数据库设计文档.md
@@ -72,7 +72,7 @@ CREATE TABLE ratings (
     INDEX idx_book_id (book_id),
     INDEX idx_rating (rating),
     INDEX idx_rating_date (rating_date)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='用户评分表';
+) ENGINE=InnoDB AUTO_INCREMENT=1000000 DEFAULT CHARSET=utf8mb4 COMMENT='用户评分表';
 ```
 
 ### 4. 收藏表 (favorites)
@@ -107,37 +107,34 @@ CREATE TABLE recommendations (
 
 ## 数据库修改脚本
 
-### 外键约束清理和用户表修改
+### 数据库版本管理
+**位置**: `book-recommendation-backend/src/main/resources/db/`
+
+```
+db/
+├── V1.0_Initial_Schema.sql      # 初始表结构创建
+├── V1.1_Remove_Foreign_Keys.sql # 删除外键+自增ID设置
+└── README.md                    # 版本管理说明
+```
+
+### 当前数据库修复脚本
+执行以下SQL解决用户注册问题：
 ```bash
-# 执行外键删除和用户表修改脚本
-cd scripts && python remove_foreign_keys.py
+mysql -h 116.205.244.106 -u root -p book_recommendation < book-recommendation-backend/src/main/resources/db/V1.1_Remove_Foreign_Keys.sql
 ```
 
 ### 设计变更说明
-- **移除外键约束**：简化数据库结构，提高性能，减少约束冲突
-- **用户表自增主键**：user_id从300001开始自动递增
-- **保持索引优化**：保留所有性能优化索引
-- **适合开发测试**：降低数据操作复杂度
+- **移除外键约束**: 简化数据库结构，提高开发效率
+- **用户表自增主键**: user_id从300001开始自动递增  
+- **评分表自增主键**: rating_id从1000000开始自动递增
+- **保持索引优化**: 保留所有性能优化索引
+- **专业版本管理**: 后端项目集成SQL版本控制
 
-### 6. 修改脚本
-```sql
- -- 1. 修改user_id为自增字段，并设置起始值为30001
-  ALTER TABLE users MODIFY COLUMN user_id INT AUTO_INCREMENT;
-
-  -- 2. 设置自增起始值为30001
-  ALTER TABLE users AUTO_INCREMENT = 300001;
-
+### 最终数据库状态
 ```
-
-## 数据库创建脚本
-
-```sql
--- 创建数据库
-CREATE DATABASE IF NOT EXISTS book_recommendation 
-DEFAULT CHARACTER SET utf8mb4 
-DEFAULT COLLATE utf8mb4_unicode_ci;
-
-USE book_recommendation;
-
--- 按顺序执行上述所有CREATE TABLE语句
+用户表(users): 77,806条 + 新注册用户(从300001开始)
+图书表(books): 271,360条
+评分表(ratings): 433,671条 + 新评分(从1000000开始)
+收藏表(favorites): 0条
+推荐表(recommendations): 0条
 ```
