--- a/docs/系统设计文档.md
+++ b/docs/系统设计文档.md
@@ -7,7 +7,7 @@
 
 ## 系统架构设计
 
-### 1. 整体架构
+### 1. 整体架构（已实现）
 ```
 ┌─────────────────┐    ┌─────────────────┐    ┌─────────────────┐
 │   Vue.js前端    │    │ SpringBoot后端  │    │   MySQL数据库   │
@@ -18,11 +18,11 @@
 └─────────────────┘    └─────────────────┘    └─────────────────┘
                                 │
                        ┌─────────────────┐
-                       │  Python算法服务  │
+                       │  Python算法服务  │ ✅
                        │                 │
-                       │ - 协同过滤      │
-                       │ - 内容推荐      │
-                       │ - 混合算法      │
+                       │ - 用户协同过滤   │ ✅
+                       │ - 物品协同过滤   │ ✅  
+                       │ - 智能缓存      │ ✅
                        └─────────────────┘
 ```
 
@@ -30,7 +30,7 @@
 - **前端**: Vue 3 + Element Plus + Pinia + Vue Router ✅
 - **后端**: SpringBoot 3.1 + Spring Security + MyBatis Plus ✅
 - **数据库**: MySQL 8.0 + 专业版本管理 ✅
-- **算法**: Python + pandas + scikit-learn + Flask（待实现）
+- **推荐算法**: Python Flask + NumPy + Pandas + Scikit-learn ✅
 - **部署**: 本地开发环境
 
 ## 数据库设计
@@ -237,183 +237,61 @@ book-recommendation-frontend/
 - **图书详情**: 图书信息展示，评分功能预留
 - **响应式设计**: 适配不同屏幕尺寸
 
-## 推荐算法设计（第三阶段实现）
+## 推荐算法设计（已实现）
 
-### 1. 协同过滤算法
+### 1. 用户协同过滤算法 ✅
 
-#### 1.1 用户基协同过滤（User-Based CF）
+**应用场景**: 推荐页面的个性化推荐
+**核心思想**: 找到兴趣相似的用户，推荐他们喜欢的图书
 
-**基本思想**：找到与目标用户兴趣相似的用户，推荐这些相似用户喜欢的图书。
+**算法步骤**:
+1. **相似用户发现**: 基于共同评分图书计算用户相似度（余弦相似度）
+2. **评分预测**: 使用相似用户的评分加权预测目标用户对图书的评分
+3. **Top-N推荐**: 按预测评分排序，推荐前N本图书
 
-**算法步骤**：
-1. 构建用户-图书评分矩阵
-2. 计算用户间相似度
-3. 找到最相似的K个用户
-4. 基于相似用户的评分预测目标用户对图书的评分
-5. 推荐评分最高的N本图书
+**性能优化**:
+- 智能缓存机制：评分后异步预计算，推荐响应<1秒
+- 候选筛选：只计算有共同评分的用户，避免全量计算
+- 增量数据更新：启动时全量加载，后续只更新新评分
 
-**代码实现**：
-```python
-import numpy as np
-import pandas as pd
-from sklearn.metrics.pairwise import cosine_similarity
-from scipy.sparse import csr_matrix
+### 2. 物品协同过滤算法 ✅
 
-class UserBasedCF:
-    def __init__(self, k_users=20, n_recommendations=10):
-        self.k_users = k_users  # 最相似的用户数量
-        self.n_recommendations = n_recommendations  # 推荐图书数量
-        self.user_item_matrix = None
-        self.user_similarity = None
-    
-    def fit(self, ratings_data):
-        """
-        训练模型
-        ratings_data: DataFrame with columns ['user_id', 'book_id', 'rating']
-        """
-        # 构建用户-图书评分矩阵
-        self.user_item_matrix = ratings_data.pivot_table(
-            index='user_id', 
-            columns='book_id', 
-            values='rating',
-            fill_value=0
-        )
-        
-        # 计算用户相似度矩阵（余弦相似度）
-        self.user_similarity = cosine_similarity(self.user_item_matrix)
-        self.user_similarity = pd.DataFrame(
-            self.user_similarity,
-            index=self.user_item_matrix.index,
-            columns=self.user_item_matrix.index
-        )
-    
-    def predict_rating(self, user_id, book_id):
-        """预测用户对特定图书的评分"""
-        if user_id not in self.user_item_matrix.index:
-            return self.user_item_matrix.loc[:, book_id].mean()
-        
-        # 获取与目标用户最相似的K个用户
-        similar_users = self.user_similarity[user_id].sort_values(ascending=False)[1:self.k_users+1]
-        
-        # 计算加权平均评分
-        weighted_sum = 0
-        similarity_sum = 0
-        
-        for similar_user, similarity in similar_users.items():
-            if self.user_item_matrix.loc[similar_user, book_id] > 0:  # 该用户评过这本书
-                weighted_sum += similarity * self.user_item_matrix.loc[similar_user, book_id]
-                similarity_sum += similarity
-        
-        if similarity_sum > 0:
-            return weighted_sum / similarity_sum
-        else:
-            return self.user_item_matrix.loc[:, book_id].mean()
-    
-    def recommend(self, user_id):
-        """为用户推荐图书"""
-        if user_id not in self.user_item_matrix.index:
-            # 新用户：推荐热门图书
-            return self.user_item_matrix.mean().sort_values(ascending=False).head(self.n_recommendations)
-        
-        # 获取用户未评分的图书
-        user_ratings = self.user_item_matrix.loc[user_id]
-        unrated_books = user_ratings[user_ratings == 0].index
-        
-        # 预测评分
-        predictions = {}
-        for book_id in unrated_books:
-            predictions[book_id] = self.predict_rating(user_id, book_id)
-        
-        # 排序并返回推荐结果
-        recommendations = sorted(predictions.items(), key=lambda x: x[1], reverse=True)
-        return recommendations[:self.n_recommendations]
+**应用场景**: 图书详情页的"喜欢这本书的用户也喜欢"
+**核心思想**: 基于图书评分模式相似度推荐相似图书
+
+**算法步骤**:
+1. **共同用户预筛选**: 找评分过目标图书的用户，快速筛选候选图书
+2. **评分模式分析**: 计算目标图书与候选图书的评分向量余弦相似度
+3. **相似图书推荐**: 按相似度排序，推荐最相似的图书
+
+**性能优化**:
+- 候选预筛选：从23万本图书筛选到几千本，计算时间从30分钟→几秒
+- 批量处理：避免重复数据库查询，使用pandas分组操作
+- 相似度缓存：缓存计算结果，避免重复计算
+
+### 3. 推荐系统架构 ✅
+
+**微服务设计**:
+```
+recommendation-algorithm-service/  # 算法微服务(端口5000)
+├── algorithms/                   # 推荐算法实现
+│   ├── collaborative_filtering.py  # 用户协同过滤 ✅
+│   └── item_based_cf.py           # 物品协同过滤 ✅
+├── data/data_loader.py           # 数据加载和缓存 ✅
+├── utils/cache.py                # 推荐结果缓存 ✅
+└── app.py                        # Flask API服务 ✅
 ```
 
-#### 2. 物品基协同过滤（Item-Based CF）
+**API接口设计**:
+- `POST /api/recommend/user-based` - 用户协同过滤推荐
+- `POST /api/recommend/similar-items` - 物品协同过滤相似图书
+- `POST /api/cache/clear` - 清除用户缓存
+- `POST /api/cache/precompute` - 异步预计算推荐
 
-**基本思想**：找到与目标图书相似的图书，基于用户对相似图书的评分预测对目标图书的评分。
-
-**代码实现**：
-```python
-class ItemBasedCF:
-    def __init__(self, k_items=20, n_recommendations=10):
-        self.k_items = k_items
-        self.n_recommendations = n_recommendations
-        self.user_item_matrix = None
-        self.item_similarity = None
-    
-    def fit(self, ratings_data):
-        """训练模型"""
-        # 构建用户-图书评分矩阵
-        self.user_item_matrix = ratings_data.pivot_table(
-            index='user_id', 
-            columns='book_id', 
-            values='rating',
-            fill_value=0
-        )
-        
-        # 计算图书相似度矩阵（基于图书的评分向量）
-        item_matrix = self.user_item_matrix.T  # 转置：图书x用户
-        self.item_similarity = cosine_similarity(item_matrix)
-        self.item_similarity = pd.DataFrame(
-            self.item_similarity,
-            index=item_matrix.index,
-            columns=item_matrix.index
-        )
-    
-    def predict_rating(self, user_id, book_id):
-        """预测用户对特定图书的评分"""
-        if user_id not in self.user_item_matrix.index:
-            return self.user_item_matrix.loc[:, book_id].mean()
-        
-        # 获取用户评过分的图书
-        user_ratings = self.user_item_matrix.loc[user_id]
-        rated_books = user_ratings[user_ratings > 0]
-        
-        if len(rated_books) == 0:
-            return self.user_item_matrix.loc[:, book_id].mean()
-        
-        # 获取与目标图书最相似的K本图书
-        similar_books = self.item_similarity[book_id].sort_values(ascending=False)[1:self.k_items+1]
-        
-        # 计算加权平均评分
-        weighted_sum = 0
-        similarity_sum = 0
-        
-        for similar_book, similarity in similar_books.items():
-            if similar_book in rated_books.index and rated_books[similar_book] > 0:
-                weighted_sum += similarity * rated_books[similar_book]
-                similarity_sum += similarity
-        
-        if similarity_sum > 0:
-            return weighted_sum / similarity_sum
-        else:
-            return self.user_item_matrix.loc[:, book_id].mean()
-    
-    def recommend(self, user_id):
-        """为用户推荐图书"""
-        if user_id not in self.user_item_matrix.index:
-            return self.user_item_matrix.mean().sort_values(ascending=False).head(self.n_recommendations)
-        
-        user_ratings = self.user_item_matrix.loc[user_id]
-        unrated_books = user_ratings[user_ratings == 0].index
-        
-        predictions = {}
-        for book_id in unrated_books:
-            predictions[book_id] = self.predict_rating(user_id, book_id)
-        
-        recommendations = sorted(predictions.items(), key=lambda x: x[1], reverse=True)
-        return recommendations[:self.n_recommendations]
-```
-
-#### 3. 协同过滤算法对比
-
-| 算法类型 | 优势 | 劣势 | 本项目使用 |
-|---------|------|------|----------|
-| User-Based | 解释性强，能发现用户社群 | 计算复杂度高，稀疏性敏感 | ✓ 主要算法 |
-| Item-Based | 稳定性好，推荐质量高 | 对新物品不友好 | ✓ 对比算法 |
-
-**本项目方案**：重点实现User-Based CF，用Item-Based CF作为对比验证，证明算法有效性。
+**集成策略**:
+- SpringBoot通过HTTP调用算法服务
+- 评分后自动触发缓存清理和预计算
+- 降级策略：算法服务不可用时返回热门图书
 
 ## 核心问题与解决方案
 
