--- a/docs/项目内容介绍.md
+++ b/docs/项目内容介绍.md
@@ -263,26 +263,36 @@ mysql --version
 # 1. 数据库修复(必须执行)
 mysql -h 116.205.244.106 -u root -p book_recommendation < book-recommendation-backend/src/main/resources/db/V1.1_Remove_Foreign_Keys.sql
 
-# 2. 启动后端
+# 2. 启动算法服务(必须先启动)
+start-algorithm.bat    # Windows
+./start-algorithm.sh   # Linux/Mac
+
+# 3. 启动后端服务
 start-backend.bat    # Windows
 ./start-backend.sh   # Linux/Mac
 
-# 3. 启动前端  
+# 4. 启动前端服务  
 start-frontend.bat   # Windows
 ./start-frontend.sh  # Linux/Mac
 ```
 
 ### 功能测试顺序
-1. **后端测试**: 访问 http://localhost:8080/api/swagger-ui.html
-2. **前端测试**: 访问 http://localhost:3000
-3. **用户注册**: 测试新用户注册(ID从300001开始)
-4. **用户登录**: 测试登录功能和状态保持
-5. **图书浏览**: 测试分页、搜索、详情功能
+1. **算法服务**: 访问 http://localhost:5000/health 检查服务状态
+2. **后端测试**: 访问 http://localhost:8080/api/swagger-ui.html
+3. **前端测试**: 访问 http://localhost:3000
+4. **用户注册**: 测试新用户注册(ID从300001开始)
+5. **用户登录**: 测试登录功能和状态保持
+6. **图书浏览**: 测试分页、搜索、详情功能
+7. **评分功能**: 测试图书评分(0-5分，0.5间隔)
+8. **个性化推荐**: 测试推荐页面的混合推荐算法
+9. **相似图书**: 测试图书详情页的相似图书推荐
+10. **评分历史**: 测试"我的评分"页面
 
 ### 文档查看顺序
-1. **README.md** - 项目总体了解
-2. **项目内容介绍.md** - 详细文件说明（本文档）
-3. **数据库设计文档.md** - 数据库表结构设计
-4. **系统设计文档.md** - 技术实现细节
-5. **项目实施计划.md** - 开发计划和进度
+1. **README.md** - 项目总体介绍和快速启动
+2. **算法介绍文档.md** - 详细的推荐算法原理和实现 ⭐
+3. **项目内容介绍.md** - 详细文件说明（本文档）
+4. **数据库设计文档.md** - 数据库表结构设计
+5. **系统设计文档.md** - 技术架构和设计决策
+6. **项目实施计划.md** - 开发进度和项目总结
 
